add nav and accordion

--- a/src/style/global/_colors.scss
+++ b/src/style/global/_colors.scss
@@ -7,3 +7,9 @@ $blackLighter: rgba($blackDark, 0.4);
 $white: #ffffff;
 $whiteLight: #e7f0f9;
 $whiteLighter: #f6f8fd;
+$blueLink: #6a95dc;
+$red: #fb082c;
+$redLight: #f4e4ea;
+$green: #00ae7d;
+$greenLight: #ddf1f1;
+$yellow: #f8b319;
