--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -6,3 +6,10 @@
 // component style
 
 @import './components/header';
+@import './components/nav-main';
+@import './components/need-help';
+@import './components/button';
+@import './components/activity';
+@import './components/activity-left';
+@import './components/vehicles-box';
+@import './components/view';
