--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid red;
+  z-index: 100;
   &__logo {
     display: flex;
     gap: 0.5rem;
@@ -73,26 +73,189 @@
     justify-content: center;
     align-items: center;
     padding: 0.75rem;
+    position: relative;
+  }
+
+  &__bell {
+    &::after {
+      content: '';
+      position: absolute;
+      width: 0.6rem;
+      height: 0.6rem;
+      border-radius: 0.3rem;
+      background-color: $red;
+      right: 0.75rem;
+      top: 0.75rem;
+      opacity: 0;
+      transition: all 0.3s ease-out;
+    }
+
+    &.active::after {
+      opacity: 1;
+    }
+  }
+
+  &__lang-popup,
+  &__bell-popup {
+    background-color: $white;
+    position: absolute;
+    right: 0;
+    top: calc(100% + 2rem);
+    padding: 1rem;
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    box-shadow: 0px 1px 5px -1px rgba($blackDarker, 0.2);
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease-out;
+    &.active {
+      opacity: 1;
+      visibility: visible;
+    }
+  }
+
+  &__lang-popup {
+    width: 150px;
+  }
+  &__lang-choice {
+    display: flex;
+    align-items: center;
+    &:first-of-type {
+      padding-bottom: 1rem;
+      border-bottom: 2px solid $primaryLight;
+    }
+
+    &:last-of-type {
+      padding-top: 1rem;
+    }
+
+    img {
+      width: 1.5rem;
+    }
+
+    span {
+      flex: 1;
+      text-align: center;
+      font-weight: 700;
+    }
+  }
+
+  &__bell-popup {
+    width: 380px;
+    > div {
+      &:not(:first-of-type) {
+        padding-top: 1rem;
+        opacity: 0.5;
+      }
+      &:not(:last-of-type) {
+        padding-bottom: 1rem;
+        border-bottom: 2px solid $primaryLight;
+      }
+
+      &:last-of-type {
+        padding-bottom: 1rem;
+      }
+    }
+
+    > a {
+      text-decoration: underline;
+      color: $blueLink;
+      text-align: center;
+      display: block;
+    }
+  }
+
+  &__bell-popup-item {
+    display: flex;
+    gap: 1rem;
+    > div {
+      &:first-of-type {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0.75rem;
+        border-radius: 1rem;
+        background-color: $whiteLighter;
+        box-shadow: 0px 1px 5px -1px rgba($blackDarker, 0.2);
+        img {
+          width: 2.4rem;
+        }
+      }
+
+      &:nth-last-of-type(2) {
+        display: flex;
+        flex-direction: column;
+        gap: 0.3rem;
+        width: 200px;
+        span {
+          font-weight: 800;
+          font-size: 1.2rem;
+          color: $blackDarker;
+        }
+
+        p {
+          line-height: 1.5;
+          font-size: 0.8rem;
+          color: $blackLight;
+        }
+      }
+
+      &:last-of-type {
+        margin-left: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        flex: 1;
+
+        span {
+          font-size: 0.7rem;
+          font-weight: 800;
+          color: $blackLighter;
+          text-align: right;
+        }
+
+        a {
+          display: flex;
+          justify-content: flex-end;
+          align-items: flex-end;
+          font-size: 0.8rem;
+          text-decoration: underline;
+          color: $blueLink;
+
+          svg {
+            font-size: inherit;
+            color: inherit;
+          }
+        }
+      }
+    }
   }
 
   &__user {
     display: flex;
-
+    position: relative;
     width: 254px;
     gap: 0.75rem;
     border-radius: 1rem;
     padding-right: 0.5rem;
-
-    img {
+    > img {
       height: 54px;
       border-radius: 1rem;
+      position: relative;
+      z-index: 10;
     }
 
-    svg {
+    > svg {
       margin-left: auto;
       transform: translateY(0.5rem);
       font-size: 1.8rem;
       color: $blackDark;
+      position: relative;
+      z-index: 10;
+      transition: all 0.3s ease-out;
+      &.active {
+        transform: translateY(0.5rem) rotate(-180deg);
+      }
     }
 
     &:hover {
@@ -106,7 +269,8 @@
     flex-direction: column;
     justify-content: center;
     gap: 0.2rem;
-
+    position: relative;
+    z-index: 10;
     span:first-of-type {
       font-weight: 800;
       color: $blackDark;
@@ -114,6 +278,83 @@
     span:last-of-type {
       font-size: 0.9rem;
       color: $blackLight;
+    }
+  }
+
+  &__user-popup {
+    position: absolute;
+    width: 100%;
+    background-color: $white;
+    top: 0;
+    left: 0;
+    padding-top: 4.5rem;
+    padding-bottom: 1rem;
+    border-radius: 1rem;
+    box-shadow: 0px 1px 5px -1px rgba($blackDarker, 0.2);
+    height: 100%;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease-out;
+    &.active {
+      visibility: visible;
+      opacity: 1;
+      height: 294.4px;
+    }
+    hr {
+      margin-bottom: 1rem;
+      background-color: rgba($blackDarker, 0.2);
+    }
+    > div {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      color: $blackLight;
+      padding: 1rem 0.5rem;
+      overflow: hidden;
+      z-index: 2;
+      border-radius: 1rem;
+      position: relative;
+      width: calc(100% - 1rem);
+      margin: auto;
+
+      &:not(:last-of-type) {
+        margin-bottom: 0.5rem;
+      }
+
+      &:hover {
+        color: $primary;
+        box-shadow: 0px 1px 5px -1px rgba($blackDarker, 0.2);
+      }
+
+      &::before {
+        content: '';
+        position: absolute;
+        left: -100%;
+        top: 0;
+        background-color: rgba($primaryLight, 0.2);
+        width: 100%;
+        height: 100%;
+        border-radius: 1rem;
+        z-index: 1;
+      }
+
+      &:hover::before {
+        left: 0;
+        transition: all 0.3s ease-out;
+      }
+
+      span {
+        font-weight: 800;
+      }
+      svg {
+        color: inherit;
+        font-size: 1.6rem;
+      }
+
+      svg:last-of-type {
+        margin-left: auto;
+        font-size: 1.2rem;
+      }
     }
   }
 }
