Ready to interview after add last changes

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -11,5 +11,7 @@
 @import './components/button';
 @import './components/activity';
 @import './components/activity-left';
+@import './components/activity-right';
 @import './components/vehicles-box';
 @import './components/view';
+@import './components/trip';
