--- a/src/style/components/_view.scss
+++ b/src/style/components/_view.scss
@@ -10,6 +10,7 @@
   border-radius: 1rem;
   position: relative;
   margin-top: 5rem;
+  margin-bottom: 2rem;
   &__content {
     color: $white;
     span {
